swagger query params add
