# src/swagger/paths/contacts/get.yaml
@@ -2,7 +2,7 @@ tags:
   - Contacts
 summary: Get list of contacts
 operationId: getContacts
-description: 'Get list of users with this endpoint'
+description: 'Get list of contacts with this endpoint'
 security:
   - bearerAuth: []
 parameters:
@@ -20,7 +20,7 @@ parameters:
     name: sortBy
     schema:
       type: string
-      example: 'phoneNumber'
+      example: 'name'
     description: "All contact's fields can be mentioned. Default value - _id"
   - in: query
     name: sortOrder
@@ -29,16 +29,15 @@ parameters:
       enum: ['asc', 'desc']
       example: 'asc'
   - in: query
-    name: isFavourite
+    name: isFavorite
     schema:
       type: boolean
-      example: true
+      example: false
   - in: query
     name: contactType
     schema:
       type: string
-      enum: ['work', 'home', 'personal']
-      example: work
+      enum: ['home', 'work', 'personal']
 responses:
   '200':
     description: Successfully found contacts!
@@ -56,7 +55,7 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully found students!
+              example: Successfully found contacts!
             data:
               type: object
               required:
@@ -71,7 +70,7 @@ responses:
                 data:
                   type: array
                   items:
-                    $ref: '../../components/schemas/contact.yaml'
+                    $ref: ../../components/schemas/contact.yaml
                 page:
                   type: number
                   example: 2
@@ -90,5 +89,5 @@ responses:
                 hasPreviousPage:
                   type: boolean
                   example: true
-  '401':
-    $ref: '../../components/responses/401.yaml'
+  '404':
+    $ref: '../../components/responses/404.yaml'
