# src/validation/contacts.js
@@ -1,25 +1,17 @@
 import Joi from 'joi';
 
 export const createContactSchema = Joi.object({
-  name: Joi.string().min(3).max(30).required(),
-  phoneNumber: Joi.string()
-    .pattern(/^[0-9]{10,15}$/)
-    .required(),
-  email: Joi.string().email().min(6).max(16),
-  isFavourite: Joi.boolean().default(false),
-  contactType: Joi.string()
-    .valid('work', 'home', 'personal')
-    .default('personal'),
-  photo: Joi.string().optional(),
+  name: Joi.string().min(3).max(20).required(),
+  phoneNumber: Joi.string().min(3).max(20).required(),
+  email: Joi.string().email().min(3).max(20),
+  isFavourite: Joi.boolean(),
+  contactType: Joi.string().valid('work', 'home', 'personal').required(),
 });
 
 export const updateContactSchema = Joi.object({
-  name: Joi.string().min(3).max(30),
-  phoneNumber: Joi.string().pattern(/^[0-9]{10,15}$/),
-  email: Joi.string().email().min(6).max(16),
-  isFavourite: Joi.boolean().default(false),
-  contactType: Joi.string()
-    .valid('work', 'home', 'personal')
-    .default('personal'),
-  photo: Joi.string().optional(),
+  name: Joi.string().min(3).max(20),
+  phoneNumber: Joi.string().min(3).max(20),
+  email: Joi.string().email().min(3).max(20),
+  isFavourite: Joi.boolean(),
+  contactType: Joi.string().valid('work', 'home', 'personal'),
 });
